# pikantic

./: README.md  pyproject.toml
.github/workflows/: test.yml
pikantic/: __init__.py  core.py
