[tool.poetry]
name = "pikantic"
version = "0.1.2"
description = "Python library for easy message broker handling using Pydantic"
authors = ["Tom Gringauz <tomgrin10@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = "https://github.com/tomgrin10/pikantic"
documentation = ""

keywords = ["pika", "rabbitmq", "amqp", "pydantic", "fastapi", "rabbit", "mq"]

classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Topic :: Utilities',
    'Typing :: Typed'
]


[tool.poetry.dependencies]
python = "^3.7"
aio-pika = "^6.8.0"
pydantic = "^1.8.2"


[tool.poetry.dev-dependencies]


[tool.isort]
profile = "black"


[tool.black]
line-length = 90


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
